<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sign_up"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="50dp"
    android:paddingBottom="30dp"
    android:paddingStart="24dp"
    android:paddingEnd="24dp"
    tools:context="mcomm.com.musicapp.fragments.LoginFragment">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/icon" />

    <TextView
        android:id="@+id/username_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textColor="@color/colorTextLight"
        android:textSize="13sp"
        android:fontFamily="@font/poppins"
        android:layout_above="@+id/username"/>

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="16dp"
        android:padding="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:fontFamily="@font/poppins"
        android:textColor="@color/colorTextLight"
        android:layout_above="@+id/email_header"
        android:background="@drawable/edit_background"/>

    <TextView
        android:id="@+id/email_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:textColor="@color/colorTextLight"
        android:text="@string/email"
        android:layout_marginTop="12dp"
        android:layout_above="@+id/email"
        android:textSize="13sp"/>

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="16dp"
        android:padding="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:fontFamily="@font/poppins"
        android:inputType="textEmailAddress"
        android:textColor="@color/colorTextLight"
        android:layout_above="@+id/password_header"
        android:background="@drawable/edit_background"/>

    <TextView
        android:id="@+id/password_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:layout_marginTop="12dp"
        android:textColor="@color/colorTextLight"
        android:textSize="13sp"
        android:fontFamily="@font/poppins"
        android:layout_above="@+id/password"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="16dp"
        android:padding="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:fontFamily="@font/poppins"
        android:inputType="textPassword"
        android:textColor="@color/colorTextLight"
        android:layout_above="@+id/confirm_password_header"
        android:background="@drawable/edit_background"/>

    <TextView
        android:id="@+id/confirm_password_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:textColor="@color/colorTextLight"
        android:text="@string/confirm_password"
        android:layout_marginTop="12dp"
        android:layout_above="@+id/confirm_password"
        android:textSize="13sp"/>

    <EditText
        android:id="@+id/confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="16dp"
        android:padding="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:inputType="textPassword"
        android:fontFamily="@font/poppins"
        android:textColor="@color/colorTextLight"
        android:layout_above="@+id/sign_up_button"
        android:background="@drawable/edit_background"/>

    <Button
        android:id="@+id/sign_up_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/login_background"
        android:textAllCaps="false"
        android:minHeight="16dp"
        android:minWidth="16dp"
        android:paddingStart="40dp"
        android:paddingEnd="40dp"
        android:paddingBottom="12dp"
        android:paddingTop="12dp"
        android:textSize="14sp"
        android:layout_marginTop="40dp"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/info"
        android:textColor="@color/colorTextLight"
        android:text="@string/sign_up"/>

    <LinearLayout
        android:id="@+id/info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/infoText"
            android:textSize="13sp"
            android:padding="2dp"
            android:fontFamily="@font/poppins"
            android:text="@string/sign_up_info"/>

        <TextView
            android:id="@+id/action_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="13sp"
            android:padding="2dp"
            android:fontFamily="@font/poppins"
            android:textColor="@color/colorAccent"
            android:text="@string/sign_in"/>
    </LinearLayout>

</RelativeLayout>
